--- a/settings/Makefile
+++ b/settings/Makefile
@@ -7,7 +7,7 @@ include theos/makefiles/common.mk
 BUNDLE_NAME = BootLogo
 BootLogo_FILES = BootLogo.mm animationPreviewViewController.m
 BootLogo_INSTALL_PATH = /Library/PreferenceBundles
-BootLogo_FRAMEWORKS = UIKit Foundation CoreGraphics
+BootLogo_FRAMEWORKS = UIKit Foundation CoreGraphics ImageIO
 BootLogo_PRIVATE_FRAMEWORKS = Preferences
 
 include $(THEOS_MAKE_PATH)/bundle.mk
